registration codes interface sort of working. before refactoring to filter by tags and unprinted only

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,8 @@
 
     <div class="container">
       <div class="content">
+        <%= render "partials/flashmessages" %>
+
         <%= yield %>
       </div><!--/content-->
 
