--- a/app/assets/stylesheets/registration_code.css.scss
+++ b/app/assets/stylesheets/registration_code.css.scss
@@ -13,3 +13,10 @@ table#registration-codes-table
   }
 }
 
+#registration-codes div#hover-actions
+{
+  display: none;
+  position: fixed;
+  right: 20px;
+  top: 50px;
+}
