Registrations closed until 30th July. Added administration menu for admin users

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,12 @@
  *
  *= require_self
  *= require jquery.ui.all
- *= require_tree .
+ *= require tables
+ *= require bootstrap_and_overrides
+ *= require account
+ *= require home
+ *= require registration_code
+ *= require sessions
+ *= require teacher/dashboard
+
  */
