--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,3 +36,5 @@ body {
 // http://bootswatch.com/
 @import "../themes/cerulean/variables.less";
 @import "../themes/cerulean/bootswatch.less";
+
+@import "dashboard.css.less";
