--- a/app/views/account/new_other.html.erb
+++ b/app/views/account/new_other.html.erb
@@ -8,10 +8,7 @@
             <%= f.text_field :registration_code, 'Registration Code', :add_on => :prepend do %>
                     <span class="add-on"><i class="icon-user"></i></span><% end %>
                 <hr/>
-              <%= f.password_field :password, 'Password', :add_on => :prepend do %>
-                  <span class="add-on"><i class="icon-lock"></i></span><% end %>
-              <%= f.password_field :password_confirmation, 'Confirm Password', :add_on => :prepend do %>
-                  <span class="add-on"><i class="icon-lock"></i></span><% end %>
+              <%= render :partial => 'email_and_password', :locals => {:f => f} %>
 
               <hr/>
 
