added message to email collection

--- a/app/views/account/_email_and_password.html.erb
+++ b/app/views/account/_email_and_password.html.erb
@@ -1,5 +1,6 @@
 <%= f.email_field :email, 'Email Address', :add_on => :prepend do %>
     <span class="add-on"><i class="icon-envelope"></i></span><% end %>
+<span class="help-block">We will only send you an email if you need to reset your password.</span>
 <%= f.password_field :password, 'Password', :add_on => :prepend do %>
     <span class="add-on"><i class="icon-lock"></i></span><% end %>
 <%= f.password_field :password_confirmation, 'Confirm Password', :add_on => :prepend do %>
