--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,11 @@
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <link href="images/favicon.ico" rel="shortcut icon">
-    <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-    <link href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="/assets/favicon.ico" rel="shortcut icon">
+    <link href="/assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/assets/icon_072.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="/assets/icon_114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="/assets/icon_144.png" rel="apple-touch-icon" sizes="144x144">
     <script type="text/javascript">
 
         var _gaq = _gaq || [];
