--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
                        <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li>
-                        <%= link_to "/account/logout" do %>
+                        <%= link_to "/account/change_password" do %>
                             <i class='icon-lock'></i> Change Password
                         <% end %>
                       </li>
