add reviewing user interface

--- a/app/assets/stylesheets/dashboard.css.less
+++ b/app/assets/stylesheets/dashboard.css.less
@@ -83,3 +83,15 @@ ul#dashboard-list
     font-size: 20px;
   }
 }
+
+tr.new td {
+    color: #ccc;
+}
+tr.failed td {
+    background-color: #c00;
+    color: #fff;
+}
+
+tr.failed:hover td {
+    color: #000;
+}
