--- a/app/views/review/review.html.erb
+++ b/app/views/review/review.html.erb
@@ -1,2 +1,15 @@
-<h1>Review#review</h1>
-<p>Find me in app/views/review/review.html.erb</p>
+<div class="row">
+  <div class="span9">
+    <h1>Review</h1>
+
+    <div class="well card-review" id="card-review">
+    </div>
+
+  </div>
+  <div class="span4">
+  </div>
+</div><!--/row-->
+
+<script type="text/javascript">
+  cardsInit = <%= Rabl::Renderer.json(@cards, 'review/review', :view_path => 'app/views').html_safe %>
+</script>
