--- a/app/assets/stylesheets/review.css.scss
+++ b/app/assets/stylesheets/review.css.scss
@@ -1,3 +1,57 @@
 // Place all the styles related to the review controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.card-review
+{
+  .finished
+  {
+    p {
+      text-align: center;
+      font-size: 16px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+  }
+
+  p
+  {
+    font-size: 32px;
+    text-align: center;
+    line-height: 40px;
+  }
+
+  p.prompt
+  {
+    text-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  p.expression
+  {
+    margin: 50px 0;
+    font-size: 42px;
+    line-height: 50px;
+  }
+
+  .buttons
+  {
+    display: block;
+    text-align: center;
+    margin: 5px auto;
+    padding: 20px 0;
+
+    button {
+      margin: 10px;
+      width: 50px;
+    }
+  }
+
+  .center
+  {
+    text-align: center;
+  }
+}
