--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,12 @@
         </script>
     <% end %>
   </head>
-  <body>
+  <!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
+  <!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
+  <!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
+  <!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
+  <!--[if (gt IE 9)]><body class="modern"> <![endif]-->
+  <!--[!(IE)]><!-->  <body class="notIE modern"> <!--<![endif]-->
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
