added some inline help for reviewing cards, fixed withdrawals and added logging when user withdraws

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -37,4 +37,5 @@ body {
 @import "../themes/cerulean/variables.less";
 @import "../themes/cerulean/bootswatch.less";
 
+@import "help.css.less";
 @import "dashboard.css.less";
