--- a/app/assets/stylesheets/help.css.less
+++ b/app/assets/stylesheets/help.css.less
@@ -18,8 +18,44 @@ div.help-topics
     {
       margin: 5px;
       padding: 5px;
-      background-color: #efefef;
+      background-color: #feffeb;
       font-size: 16px;
+    }
+  }
+}
+
+
+
+div.inline-help-container
+{
+  background-color: #feffeb;
+    border: 1px solid #ccc;
+  .border-radius(5px);
+
+  padding: 5px;
+
+  margin: 0;
+
+  a.inline-help-toggle
+  {
+    padding: 15px;
+    font-size: 18px;
+    display: block;
+    text-align: right;
+  }
+
+  div.inline-help
+  {
+      padding: 15px;
+  }
+
+  ul
+  {
+    list-style: none;
+
+    li
+    {
+      margin: 16px 0;
     }
   }
 }
