added keyboard shortcuts, help for using keyboard shortcuts. Added javascript timing to responses. Opened registrations permanently. Added help text to login page registration code text field

--- a/app/views/review/review.html.erb
+++ b/app/views/review/review.html.erb
@@ -16,6 +16,9 @@
             <p>Try to recall the reading and meaning of the word shown on the left.</p>
             <p><strong>If you have never seen the word before</strong>, click "Show Answer" and then try to memorise the word. Choose "0" as your rating.</p>
             <p><strong>If you know the word</strong>, try to recall the reading and meaning of the word, then click "Show Answer" and rate your answer.</p>
+
+            <h3>Keyboard Shortcuts:</h3>
+            <p>You can press the <button disabled class="btn">F</button> key on your keyboard to flip the card (show the answer)</p>
           </div>
 
           <div class="help-content" id="inline-help-card-back">
@@ -49,6 +52,9 @@
                 quickly and easily
               </li>
             </ul>
+
+            <h3>Keyboard Shortcuts:</h3>
+            <p>You can press the number keys (0 to 5) on your keyboard to select a rating</p>
           </div>
       </div>
     </div>
