--- a/app/views/teacher/dashboard/index.html.erb
+++ b/app/views/teacher/dashboard/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Teacher::Dashboard#index</h1>
-<p>Find me in app/views/teacher/dashboard/index.html.erb</p>
+<div class="row">
+  <div class="span8">
+    <h1>Teacher Dashboard</h1>
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Metric</th>
+          <th>Value</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @metrics.each do |metric| %>
+          <tr>
+            <td><%= metric[:metric]%></td>
+            <td><%= metric[:value].to_s%></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="span4">
+    <%= render "teacher/dashboard/navmenu" %>
+  </div>
+</div>
