--- a/app/views/teacher/dashboard/index.html.erb
+++ b/app/views/teacher/dashboard/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="span8">
     <h1>Teacher Dashboard</h1>
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered stats">
       <thead>
         <tr>
           <th>Metric</th>
@@ -12,7 +12,13 @@
         <% @metrics.each do |metric| %>
           <tr>
             <td><%= metric[:metric]%></td>
-            <td><%= metric[:value].to_s%></td>
+            <td>
+              <% if metric[:time].nil? %>
+                <%= metric[:value].to_s%>
+              <% else %>
+                <abbr class="timeago" title="<%= metric[:value] %>"><%= metric[:value] %></abbr>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </tbody>
