--- a/app/views/teacher/dashboard/words.html.erb
+++ b/app/views/teacher/dashboard/words.html.erb
@@ -18,6 +18,7 @@
           <th>% of registered students who have studied</th>
           <th>Difficulty</th>
           <th>Average interval</th>
+          <th>Currently failed #</th>
         </tr>
       </thead>
       <tbody>
@@ -46,6 +47,7 @@
             <td><%= word["number_studied"] %> of <%= @total_users %> students (<%= word["pct_studied"] %>%)</td>
             <td><%= (100 - word["easiness"]*100).to_i %>%</td>
             <td><%= word["interval"] %> days</td>
+            <td><%= word["failed"] %></td>
           </tr>
         <% end %>
       </tbody>
