--- a/app/views/teacher/dashboard/words.html.erb
+++ b/app/views/teacher/dashboard/words.html.erb
@@ -46,7 +46,7 @@
             <td><%= word["reviews_this_week"] %></td>
             <td><%= word["number_studied"] %> of <%= @total_users %> students (<%= word["pct_studied"] %>%)</td>
             <td><%= (100 - word["easiness"]*100).to_i %>%</td>
-            <td><%= word["interval"] %> days</td>
+            <td><%= number_with_precision(word["interval"], :precision => 1) %> days</td>
             <td><%= word["failed"] %></td>
           </tr>
         <% end %>
