--- a/app/views/account/reset_password.html.erb
+++ b/app/views/account/reset_password.html.erb
@@ -5,7 +5,7 @@
             
               <div class="input controls input-prepend">
                 <%= label_tag 'email', "Email address you registered with" %>
-                <span class="add-on"><i class="icon-letter"></i></span><%= text_field_tag 'email' %>
+                <span class="add-on"><i class="icon-envelope"></i></span><%= text_field_tag 'email' %>
               </div>
               <div class="form-actions">
                 <%= submit_tag "Reset", :class => "btn btn-primary" %>
