Password reset using registration code instead of email

--- a/app/views/account/reset_password.html.erb
+++ b/app/views/account/reset_password.html.erb
@@ -2,10 +2,14 @@
   <div class="offset3 span6">
         <div class="registration-form">
           <%= form_tag do |f| %>
+
+              <h1>Reset Password</h1>
+
+              <p>From this page you can reset your password if you forgot it. An email will be sent with a new password.</p>
             
               <div class="input controls input-prepend">
-                <%= label_tag 'email', "Email address you registered with" %>
-                <span class="add-on"><i class="icon-envelope"></i></span><%= text_field_tag 'email' %>
+                <%= label_tag 'registration_code', "Enter your registration code" %>
+                <span class="add-on"><i class="icon-user"></i></span><%= text_field_tag 'registration_code' %>
               </div>
               <div class="form-actions">
                 <%= submit_tag "Reset", :class => "btn btn-primary" %>
