Added data download interface and reviews data download without new reviews

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,6 +73,7 @@
                       <%= tb_nav_link tb_icon("lock", "Registration Codes"), "/registration_codes" %>
                       <%= tb_nav_link tb_icon("th-list", "Application Logs"), "/admin/logs" %>
                       <%= tb_nav_link tb_icon("user", "Users"), "/admin/users" %>
+                      <%= tb_nav_link tb_icon("th-list", "Data Download"), "/admin/data" %>
                   <% end %>
               <% end %>
             </ul>
